{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 89,
  "lineage": "5d32fec2-9827-2002-079a-c99cb49c5fec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9c4183ab40a3f23",
            "arn": "arn:aws:ec2:us-west-2:345362761946:elastic-ip/eipalloc-0f9c4183ab40a3f23",
            "association_id": "eipassoc-088cfaea6adc12eb1",
            "domain": "vpc",
            "id": "eipalloc-0f9c4183ab40a3f23",
            "instance": "i-065c14ff2d7e129bc",
            "network_border_group": "us-west-2",
            "network_interface": "eni-09edf991cc287197b",
            "private_dns": "ip-10-10-10-89.us-west-2.compute.internal",
            "private_ip": "10.10.10.89",
            "public_dns": "ec2-34-218-207-116.us-west-2.compute.amazonaws.com",
            "public_ip": "34.218.207.116",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "hub-cloud-dev-static-ip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hub-cloud-dev-static-ip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "eipalloc-0f9c4183ab40a3f23",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_instance.dev_app",
            "aws_key_pair.deployer_key",
            "aws_security_group.dev_compute_sg",
            "aws_subnet.public",
            "aws_vpc.environment_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.developer_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prod_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c328e57fffc09316",
            "arn": "arn:aws:ec2:us-west-2:345362761946:elastic-ip/eipalloc-0c328e57fffc09316",
            "association_id": "eipassoc-0eaa085117585db5e",
            "domain": "vpc",
            "id": "eipalloc-0c328e57fffc09316",
            "instance": "i-0b4991d98fd0a2f18",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0e947e08cac91bc43",
            "private_dns": "ip-10-30-10-31.us-west-2.compute.internal",
            "private_ip": "10.30.10.31",
            "public_dns": "ec2-32-186-187-101.us-west-2.compute.amazonaws.com",
            "public_ip": "32.186.187.101",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Environment": "prod",
              "Name": "hub-cloud-prod-static-ip"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "hub-cloud-prod-static-ip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "eipalloc-0c328e57fffc09316",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_instance.prod_app",
            "aws_key_pair.deployer_key",
            "aws_security_group.prod_compute_sg",
            "aws_subnet.public",
            "aws_vpc.environment_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.developer_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "staging_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e710d032d8f74d3",
            "arn": "arn:aws:ec2:us-west-2:345362761946:elastic-ip/eipalloc-01e710d032d8f74d3",
            "association_id": "eipassoc-0857ba49a335dc43c",
            "domain": "vpc",
            "id": "eipalloc-01e710d032d8f74d3",
            "instance": "i-07ae12337e5589173",
            "network_border_group": "us-west-2",
            "network_interface": "eni-02492851acb09eabe",
            "private_dns": "ip-10-20-10-48.us-west-2.compute.internal",
            "private_ip": "10.20.10.48",
            "public_dns": "ec2-100-23-7-17.us-west-2.compute.amazonaws.com",
            "public_ip": "100.23.7.17",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Environment": "staging",
              "Name": "hub-cloud-staging-static-ip"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "hub-cloud-staging-static-ip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "eipalloc-01e710d032d8f74d3",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_instance.staging_app",
            "aws_key_pair.deployer_key",
            "aws_security_group.staging_compute_sg",
            "aws_subnet.public",
            "aws_vpc.environment_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.developer_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bd515973f5bcf6a0",
            "arn": "arn:aws:ec2:us-west-2:345362761946:instance/i-065c14ff2d7e129bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065c14ff2d7e129bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "hub-cloud-developer-access-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09edf991cc287197b"
              }
            ],
            "primary_network_interface_id": "eni-09edf991cc287197b",
            "private_dns": "ip-10-10-10-89.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.89",
            "public_dns": "ec2-34-218-207-116.us-west-2.compute.amazonaws.com",
            "public_ip": "34.218.207.116",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f4aba0b4d519fae3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c608e9a102b44be4",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "hub-cloud-dev-app-server"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "hub-cloud-dev-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8aa82178d9ec52a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "i-065c14ff2d7e129bc",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.deployer_key",
            "aws_security_group.dev_compute_sg",
            "aws_subnet.public",
            "aws_vpc.environment_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.developer_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bd515973f5bcf6a0",
            "arn": "arn:aws:ec2:us-west-2:345362761946:instance/i-0b4991d98fd0a2f18",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4991d98fd0a2f18",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "hub-cloud-developer-access-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e947e08cac91bc43"
              }
            ],
            "primary_network_interface_id": "eni-0e947e08cac91bc43",
            "private_dns": "ip-10-30-10-31.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.10.31",
            "public_dns": "ec2-32-186-187-101.us-west-2.compute.amazonaws.com",
            "public_ip": "32.186.187.101",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08da6b19a7022b934",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03cd9b887876fc6dd",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "hub-cloud-prod-app-server"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "hub-cloud-prod-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06438fddaa5c061a0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "i-0b4991d98fd0a2f18",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.deployer_key",
            "aws_security_group.prod_compute_sg",
            "aws_subnet.public",
            "aws_vpc.environment_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.developer_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "staging_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bd515973f5bcf6a0",
            "arn": "arn:aws:ec2:us-west-2:345362761946:instance/i-07ae12337e5589173",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ae12337e5589173",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "hub-cloud-developer-access-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02492851acb09eabe"
              }
            ],
            "primary_network_interface_id": "eni-02492851acb09eabe",
            "private_dns": "ip-10-20-10-48.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.10.48",
            "public_dns": "ec2-100-23-7-17.us-west-2.compute.amazonaws.com",
            "public_ip": "100.23.7.17",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e5c9b0a2b5e8a892",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c9f9655c6d6ef16",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "hub-cloud-staging-app-server"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "hub-cloud-staging-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-065d1edeae0e5467e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "i-07ae12337e5589173",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.deployer_key",
            "aws_security_group.staging_compute_sg",
            "aws_subnet.public",
            "aws_vpc.environment_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.developer_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:internet-gateway/igw-0f891a66c81bf9751",
            "id": "igw-0f891a66c81bf9751",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "hub-cloud-dev-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "hub-cloud-dev-igw"
            },
            "vpc_id": "vpc-0f806833923ac732f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "igw-0f891a66c81bf9751",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:internet-gateway/igw-01bd1dd10a8b0d645",
            "id": "igw-01bd1dd10a8b0d645",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "hub-cloud-prod-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "hub-cloud-prod-igw"
            },
            "vpc_id": "vpc-000829fd7d9749e61"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "igw-01bd1dd10a8b0d645",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "staging",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:internet-gateway/igw-03f3b31e4407c1ede",
            "id": "igw-03f3b31e4407c1ede",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "hub-cloud-staging-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "hub-cloud-staging-igw"
            },
            "vpc_id": "vpc-084c60b9a696b333e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "igw-03f3b31e4407c1ede",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:route-table/rtb-09565e3b29a8d5b4c",
            "id": "rtb-09565e3b29a8d5b4c",
            "owner_id": "345362761946",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f891a66c81bf9751",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hub-cloud-dev-public-rt"
            },
            "tags_all": {
              "Name": "hub-cloud-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f806833923ac732f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "rtb-09565e3b29a8d5b4c",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:route-table/rtb-0d7d05c4fed2fe1bc",
            "id": "rtb-0d7d05c4fed2fe1bc",
            "owner_id": "345362761946",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bd1dd10a8b0d645",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hub-cloud-prod-public-rt"
            },
            "tags_all": {
              "Name": "hub-cloud-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-000829fd7d9749e61"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "rtb-0d7d05c4fed2fe1bc",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "staging",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:route-table/rtb-0f4383a2d6f3d23e9",
            "id": "rtb-0f4383a2d6f3d23e9",
            "owner_id": "345362761946",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f3b31e4407c1ede",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hub-cloud-staging-public-rt"
            },
            "tags_all": {
              "Name": "hub-cloud-staging-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c60b9a696b333e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "rtb-0f4383a2d6f3d23e9",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af14b8d2a9c6479f",
            "region": "us-west-2",
            "route_table_id": "rtb-09565e3b29a8d5b4c",
            "subnet_id": "subnet-0c608e9a102b44be4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "rtbassoc-0af14b8d2a9c6479f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9cf5beb3aef7638",
            "region": "us-west-2",
            "route_table_id": "rtb-0d7d05c4fed2fe1bc",
            "subnet_id": "subnet-03cd9b887876fc6dd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "rtbassoc-0c9cf5beb3aef7638",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "staging",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3350102dfc37f7d",
            "region": "us-west-2",
            "route_table_id": "rtb-0f4383a2d6f3d23e9",
            "subnet_id": "subnet-03c9f9655c6d6ef16"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "rtbassoc-0a3350102dfc37f7d",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_compute_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:security-group/sg-0d8aa82178d9ec52a",
            "description": "Assigned to Dev instances and agents",
            "egress": [],
            "id": "sg-0d8aa82178d9ec52a",
            "ingress": [],
            "name": "dev-compute-security-group",
            "name_prefix": "",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f806833923ac732f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "sg-0d8aa82178d9ec52a",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:security-group/sg-0f5ac7b2583a8031a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5ac7b2583a8031a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic strictly from Dev compute",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d8aa82178d9ec52a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-database-security-group",
            "name_prefix": "",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f806833923ac732f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "sg-0f5ac7b2583a8031a",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.dev_compute_sg",
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_compute_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:security-group/sg-06438fddaa5c061a0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06438fddaa5c061a0",
            "ingress": [],
            "name": "prod-compute-security-group",
            "name_prefix": "",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-000829fd7d9749e61"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "sg-06438fddaa5c061a0",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:security-group/sg-09a3ea77c98c36e54",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a3ea77c98c36e54",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Strictly limit live database access to production compute",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06438fddaa5c061a0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "prod-database-security-group",
            "name_prefix": "",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-000829fd7d9749e61"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "sg-09a3ea77c98c36e54",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.prod_compute_sg",
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "staging_compute_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:security-group/sg-065d1edeae0e5467e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-065d1edeae0e5467e",
            "ingress": [],
            "name": "staging-compute-security-group",
            "name_prefix": "",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084c60b9a696b333e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "sg-065d1edeae0e5467e",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "staging_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:security-group/sg-0a946a7f4ef3634c0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a946a7f4ef3634c0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow staging compute to query the staging database",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065d1edeae0e5467e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "staging-database-security-group",
            "name_prefix": "",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084c60b9a696b333e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "sg-0a946a7f4ef3634c0",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.staging_compute_sg",
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:subnet/subnet-0f2bbe8d6d4e0f2ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2bbe8d6d4e0f2ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345362761946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "hub-cloud-dev-db-subnet-az1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hub-cloud-dev-db-subnet-az1"
            },
            "vpc_id": "vpc-0f806833923ac732f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "subnet-0f2bbe8d6d4e0f2ef",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:subnet/subnet-0c17e6ad8293952f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.30.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c17e6ad8293952f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345362761946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "prod",
              "Name": "hub-cloud-prod-db-subnet-az1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "hub-cloud-prod-db-subnet-az1"
            },
            "vpc_id": "vpc-000829fd7d9749e61"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "subnet-0c17e6ad8293952f6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "staging",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:subnet/subnet-0454e8015351680fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.20.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0454e8015351680fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345362761946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "staging",
              "Name": "hub-cloud-staging-db-subnet-az1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "hub-cloud-staging-db-subnet-az1"
            },
            "vpc_id": "vpc-084c60b9a696b333e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "subnet-0454e8015351680fe",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:subnet/subnet-0584a6da54c105f84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0584a6da54c105f84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345362761946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "hub-cloud-dev-db-subnet-az2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hub-cloud-dev-db-subnet-az2"
            },
            "vpc_id": "vpc-0f806833923ac732f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "subnet-0584a6da54c105f84",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:subnet/subnet-03337c2814e32efd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.30.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03337c2814e32efd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345362761946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "prod",
              "Name": "hub-cloud-prod-db-subnet-az2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "hub-cloud-prod-db-subnet-az2"
            },
            "vpc_id": "vpc-000829fd7d9749e61"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "subnet-03337c2814e32efd6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "staging",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:subnet/subnet-0383b19ea31a20012",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.20.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0383b19ea31a20012",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345362761946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "staging",
              "Name": "hub-cloud-staging-db-subnet-az2"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "hub-cloud-staging-db-subnet-az2"
            },
            "vpc_id": "vpc-084c60b9a696b333e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "subnet-0383b19ea31a20012",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:subnet/subnet-0c608e9a102b44be4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c608e9a102b44be4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "345362761946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "hub-cloud-dev-public-app-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hub-cloud-dev-public-app-subnet"
            },
            "vpc_id": "vpc-0f806833923ac732f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "subnet-0c608e9a102b44be4",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:subnet/subnet-03cd9b887876fc6dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.30.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cd9b887876fc6dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "345362761946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "prod",
              "Name": "hub-cloud-prod-public-app-subnet"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "hub-cloud-prod-public-app-subnet"
            },
            "vpc_id": "vpc-000829fd7d9749e61"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "subnet-03cd9b887876fc6dd",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        },
        {
          "index_key": "staging",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:subnet/subnet-03c9f9655c6d6ef16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c9f9655c6d6ef16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "345362761946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "staging",
              "Name": "hub-cloud-staging-public-app-subnet"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "hub-cloud-staging-public-app-subnet"
            },
            "vpc_id": "vpc-084c60b9a696b333e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "subnet-03c9f9655c6d6ef16",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.environment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "environment_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:vpc/vpc-0f806833923ac732f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ad5446fb82f8bb90",
            "default_route_table_id": "rtb-09efd96f5865a6c62",
            "default_security_group_id": "sg-00962a22e7ac9bdb8",
            "dhcp_options_id": "dopt-01849e37bf91f00b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f806833923ac732f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09efd96f5865a6c62",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "hub-cloud-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hub-cloud-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "vpc-0f806833923ac732f",
            "region": "us-west-2"
          }
        },
        {
          "index_key": "prod",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:vpc/vpc-000829fd7d9749e61",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-01699f8640c2edf4a",
            "default_route_table_id": "rtb-01bc9e00df8fa2df3",
            "default_security_group_id": "sg-05ad106a570fe1687",
            "dhcp_options_id": "dopt-01849e37bf91f00b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000829fd7d9749e61",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01bc9e00df8fa2df3",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "tags": {
              "Environment": "prod",
              "Name": "hub-cloud-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "hub-cloud-prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "vpc-000829fd7d9749e61",
            "region": "us-west-2"
          }
        },
        {
          "index_key": "staging",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345362761946:vpc/vpc-084c60b9a696b333e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0bc3c7f6af19a2a14",
            "default_route_table_id": "rtb-03d2d58ca3a012539",
            "default_security_group_id": "sg-00d78514388a5e1c1",
            "dhcp_options_id": "dopt-01849e37bf91f00b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084c60b9a696b333e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d2d58ca3a012539",
            "owner_id": "345362761946",
            "region": "us-west-2",
            "tags": {
              "Environment": "staging",
              "Name": "hub-cloud-staging-vpc"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "hub-cloud-staging-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345362761946",
            "id": "vpc-084c60b9a696b333e",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}